@startuml
class ButtonInvoke {
    + <<readonly>> customLabel : string
    + <<readonly>> methodName : string
    + <<readonly>> methodParameter : object
    + ButtonInvoke(methodName:string, methodParameter:object, displayIn:DisplayIn, customLabel:string)
}
enum DisplayIn {
    PlayMode,
    EditMode,
    PlayAndEditModes,
}
PropertyAttribute <|-- ButtonInvoke
ButtonInvoke --> "displayIn" DisplayIn
ButtonInvoke +-- DisplayIn
@enduml
